--- a/apigateway-service/src/main/resources/application.yml
+++ b/apigateway-service/src/main/resources/application.yml
@@ -13,7 +13,19 @@ spring:
     name: apigateway-service
   cloud:
     gateway:
-        routes:
+      default-filters:
+        - name: GlobalFilter
+          args:
+            baseMessage: Spring Cloud Gateway Global Filter
+            preLogger: true
+            postLogger: true
+      routes:
+          - id: user-service
+            uri: lb://USER-SERVICE
+            # 조건
+            # 띄어쓰기하면 안됨.
+            predicates:
+              - Path=/user-service/**
           - id: first-service
 #            uri: http://localhost:8081/
             uri: lb://MY-FIRST-SERVICE
@@ -22,13 +34,20 @@ spring:
             predicates:
               - Path=/first-service/**
             filters:
-              - AddRequestHeader=first-request, first-request-header2
-              - AddResponseHeader=first-response, first-response-header2
+#              - AddRequestHeader=first-request, first-request-header2
+#              - AddResponseHeader=first-response, first-response-header2
+              - CustomFilter
           - id: second-service
 #            uri: http://localhost:8082/
             uri: lb://MY-SECOND-SERVICE
             predicates:
               - Path=/second-service/**
             filters:
-              - AddRequestHeader=second-request, second-request-header2
-              - AddResponseHeader=second-response, second-response-header2
+#              - AddRequestHeader=second-request, second-request-header2
+#              - AddResponseHeader=second-response, second-response-header2
+              - name: CustomFilter #파라미터 넣으려면 name이 필요
+              - name: LoggingFilter
+                args:
+                  baseMessage: Hi, there.
+                  preLogger: true
+                  postLogger: true
